[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
euler = ["solutions.txt"]

[project]
name = "euler"
version = "0.1.0"
description = ""
authors = [{ name = "Ian Breckenridge", email = "i13e@i13e.org" }]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["project-euler"]
dependencies = [
  "beautifulsoup4==4.12.2",
  "click==8.1.7",
  "humanize==4.8.0",
  "requests==2.31.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.scripts]
euler = "euler.main:main"

[project.urls]
"Homepage" = "https://github.com/i13e/euler"
"Documentation" = "https://github.com/i13e/euler/wiki"
"Bug Tracker" = "https://github.com/i13e/euler/issues"
