[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
euler = ["solutions.txt"]

[project]
name = "euler"
dynamic = ["version", "dependencies"]
description = ""
authors = [{name = "Ian Breckenridge"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["project-euler"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.scripts]
euler = "euler.main:main"

[project.urls]
Repository = "https://github.com/i13e/euler"
Documentation = "https://github.com/i13e/euler/wiki"
Issues = "https://github.com/i13e/euler/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
